Debugging downloadFiles() //TODO timer on requests